# mvn-rs

./: .gitignore  README.md  index.js  package.json
.github/workflows/: tests.yml
benchmarks/: benchmark.js
js/: simple_mvn.js
mvn/: Cargo.toml
mvn/src/: lib.rs
