[package]
name = "mvn"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Multivariate normal distribution library with WASM support"
repository = "https://example.com"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["wasm-bindgen"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
